fix(style): height of scrollbar is now the same as width - relevant for horizontal scrolling

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -125,6 +125,7 @@ $width-mobile: 360px;
 
 .main-router-outlet ::-webkit-scrollbar {
   width: 6px;
+  height: 6px;
   background-color: #F5F5F5;
 }
 
